Update configs and styles

--- a/Resume-Builder-MERN/client/src/index.css
+++ b/Resume-Builder-MERN/client/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 /* Resetting default margin, padding, and box-sizing */
 * {
   margin: 0;
